added divs and main structure for the card section

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="header-hero-wrapper">
       <div class="header">
          <img class="header-logo" src="./images/code2.jpg" alt="Tech Logo"
-         width="500" 
-              height="500">
+         width="400" 
+              height="400">
              <ul class="header-links">
              <li><a href="?">About Us</a></li>
              <li><a href="?">Services</a></li>
@@ -35,5 +35,30 @@
 </div>
 </div>
 
+
+<div class="cards-wrapper">
+  <h2>Cheap Technologies</h2>
+  <div class="cards-container">
+    <div class="card">
+      <img class="dev-image" src="./images/pexels-eduardo-rosas-907489.jpg" alt="Laptop screen">
+      <p class="card-subtext">Application Development</p>
+
+      <div class="card">
+        <img class="dev-image" src="./images/pexels-eduardo-rosas-907489.jpg" alt="Laptop screen">
+        <p class="card-subtext">Network Development</p>
+
+        <div class="card">
+          <img class="dev-image" src="./images/pexels-eduardo-rosas-907489.jpg" alt="Laptop screen">
+          <p class="card-subtext">Office Development</p>
+
+          <div class="card">
+            <img class="dev-image" src="./images/pexels-eduardo-rosas-907489.jpg" alt="Laptop screen">
+            <p class="card-subtext">Consulting</p>
+      
+
+    </div>
+  </div>
+
+</div>
 </body>
 </html>
